- Increased robustness across the board; E:S should be harder to crash.
  (Phil)
- Various strings shortened to fit dialogs. (Phil, Joey Hess for suggestion)
- Fixed bug that kept music from playing. (Phil, Brian Warner for suggestion)
- Keep running if the mixer can't load. (Phil, Rafal Czlonka for bug report)
- Fix up the handling of music paths. (Phil)
* Three new tracks, 'Deprecation', 'Awakening,' and 'Inevitable,' including
  the Psycle source! (Max McCracken)

OTHER CHANGES:
- Code cleanups and reformatting. (Phil)
- Cleanup a bug introduced in player.py, item may be int rather than object.
  (Brian)
- The music loading code is less fragile now; it shouldn't break on too-short
  file names. (Phil)
- Massive changes to data file handling; we now use Python's built-in
  ConfigParser. (Phil)
- Further changes to the data file formats, for consistency and ease of
  code/data maintenance.  (Phil)
- Switched sounds to using data files, for smoother future expansion. (Phil)

v0.26a (released 2007.08.12):

USER-VISIBLE CHANGES:
- Made Very Easy mode actually playable. (Phil, Simon Goodall for bug
  report.)

v0.26 (released 2007.08.09):
  [Note that the official Endgame: Singularity soundtrack is released
   separately from the game. It can be found at the official website:
      http://emhsoft.com/singularity/
   In addition, user-added tracks are also supported.  See the README
   for details.]

USER-VISIBLE CHANGES:
- Added CPU indicator to the main screen. (emh, John DiMarco for suggestion)
- Research screen will now automatically prune bases. (emh, John DiMarco
  for suggestion)
- Fixed slight flicker when toggling options. (emh)
* Added difficulty selection. (emh, many people for suggestion)
* Added simple background music playing ability. (emh, Matthew Robinson for
  initial patch.)
- Single-CPU bases have CPU power listed. (emh, robaal for suggestion)
* Delicious retro-futuristic music specially made for Endgame: Singularity,